Fixed label alignment in form set view

--- a/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/api/form/field-set-view.less
+++ b/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/api/form/field-set-view.less
@@ -9,6 +9,7 @@
     overflow: hidden;
     white-space: pre;
     text-overflow: ellipsis;
+    margin-left:10px;
   }
 
   .field-set-container > *:not(:last-child) {
